# Zugzwang

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  MakeFile  README.md  premake5.lua
src/: bitboard.cpp  bitboard.h  board.cpp  board.h  evaluate.cpp  evaluate.h  main.cpp  movegen.cpp  movegen.h  position.cpp  position.h  precomputed_move_data.cpp  precomputed_move_data.h  pvtable.cpp  pvtable.h  search.cpp  search.h  types.h  uci.cpp  uci.h
